--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,7 +1,8 @@
-#after any changes to the Gemfile, execute bundle update!
 source "https://rubygems.org"
-gemspec
 
-# Delete the following lines if not on Windows: 
-# Performance-booster for watching directories on Windows
-gem "wdm", ">= 0.1.0" if Gem.win_platform?
+gem "jekyll", "~> 3.2.1"
+gem "jekyll-sitemap"
+gem "jekyll-gist"
+gem 'jekyll-mentions'
+gem 'jekyll-feed'
+gem 'jekyll-paginate'
