--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,20 @@
-remote_theme:  chrisrhymes/mere-blog-theme
+title:             Square Zero
+email:             sssurajsuraj@gmail.com
+description:       Silent Observations
+author:            J
+#url:               "localhost:4000"
+url:               "http://squarezero.github.io/"
+baseurl:
+
+# Social Profiles
+#twitter_username:  
+#github_username:   
+#facebook_username: 
+
+# Build settings
+markdown:          kramdown
+paginate:          10
+paginate_path:     "/posts/page:num/"
+plugins:
+  - jekyll-feed
+  - jekyll-paginate
