--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
-title:             Square Zero
-email:             sssurajsuraj@gmail.com
+title:             BatMon Feeding Frenzy
+email:             joshwa.james@gmail.com
 description:       Silent Observations
-author:            J
+author:            
 #url:               "localhost:4000"
 url:               "http://squarezero.github.io/"
 baseurl:
