--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title:             BatMon Feeding Frenzy
 email:             joshwa.james@gmail.com
-description:       Silent Observations
+description:       BatMon Video Game
 author:            
 #url:               "localhost:4000"
 url:               "http://squarezero.github.io/"
